--- a/webstore/src/app/components/header/header.component.html
+++ b/webstore/src/app/components/header/header.component.html
@@ -1,6 +1,46 @@
 <mat-toolbar class=" mx-auto border-x justify-between">
     <a routerLink="home"> Code by CECJ store</a>
-    <mat-icon [matBadge] = "1">
-        
-        shopping_cart</mat-icon>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon [matBadge] = "1" matBadgeColor = "warn">
+            shopping_cart
+        </mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+        <div class="p-3 divide-y divide-solid">
+            <div class="pb-3 flex justify-between">
+                <span class="mr-16">1 Items</span>
+                <a routerlink="cart"> View cart</a>
+            </div>
+            <div class="py-3">
+                <div class="flex justify-between font-light mb-2">
+                    PS5 x 1
+                    <span class="font-bold">{{ '500' | currency:'EUR':true }}</span>
+                </div>
+                <div class="flex justify-between font-light mb-2">
+                    Alexa x 1
+                    <span class="font-bold">{{ '50' | currency:'EUR':true }}</span>
+                </div>
+                <div class="flex justify-between font-light mb-2">
+                    Harry Potter Book x 1
+                    <span class="font-bold">{{ '30' | currency:'EUR':true }}</span>
+                </div>
+                <div class="flex justify-between font-light mb-2">
+                    Mouse x 1
+                    <span class="font-bold">{{ '20' | currency:'EUR':true }}</span>
+                </div>
+            </div>
+            <div class="flex justify-between py-3 font-light">
+                Total
+                    <span class="font-bold">{{ '1500' | currency:'EUR':true }}</span>
+            </div>
+            <div class="pt-3 flex justify-between">
+                <button class="bg-red-500 text-white rounded-full w-9 h-9">
+                    <mat-icon>remove_shopping_cart</mat-icon>
+                </button>
+                <button  routerLink = "cart" class="bg-green-500 text-white rounded-full w-9 h-9">
+                    <mat-icon>shopping_cart</mat-icon>
+                </button>
+            </div>
+        </div>
+    </mat-menu>
 </mat-toolbar>
