--- a/webstore/src/app/pages/home/home.component.html
+++ b/webstore/src/app/pages/home/home.component.html
@@ -1,8 +1,11 @@
 <mat-drawer-container [autosize]="true" class="min-h-full max-w-7xl mx-auto border-x">
     <mat-drawer mode="side" opened class="p-6">
-    <div>Filters</div>
+        <app-filters (showCategory)="onShowCategory($event)"></app-filters>
     </mat-drawer>
     <mat-drawer-container class="p-6">
-
+        <app-products-header (columnsCountChange)="onColumnsUpdated($event)">
+          
+        </app-products-header>
+        {{category}}
     </mat-drawer-container>
 </mat-drawer-container>
