--- a/webstore/src/app/pages/home/home.component.html
+++ b/webstore/src/app/pages/home/home.component.html
@@ -3,9 +3,26 @@
         <app-filters (showCategory)="onShowCategory($event)"></app-filters>
     </mat-drawer>
     <mat-drawer-container class="p-6">
-        <app-products-header (columnsCountChange)="onColumnsUpdated($event)">
-          
-        </app-products-header>
-        {{category}}
+        <app-products-header (columnsCountChange)="onColumnsUpdated($event)"></app-products-header>
+        <mat-grid-list gutterSize="16" [cols]="cols" [rowHeight]="rowsHeight">
+            <mat-grid-tile>
+                <app-product-box  class="w-full" [fullWidthMode]="cols == 1"></app-product-box>
+            </mat-grid-tile>
+            <mat-grid-tile>
+                <app-product-box  class="w-full" [fullWidthMode]="cols == 1"></app-product-box>
+            </mat-grid-tile>
+            <mat-grid-tile>
+                <app-product-box  class="w-full" [fullWidthMode]="cols == 1"></app-product-box>
+            </mat-grid-tile>
+            <mat-grid-tile>
+                <app-product-box  class="w-full" [fullWidthMode]="cols == 1"></app-product-box>
+            </mat-grid-tile>
+            <mat-grid-tile>
+                <app-product-box  class="w-full" [fullWidthMode]="cols == 1"></app-product-box>
+            </mat-grid-tile>
+            <mat-grid-tile>
+                <app-product-box  class="w-full" [fullWidthMode]="cols == 1"></app-product-box>
+            </mat-grid-tile>
+        </mat-grid-list>
     </mat-drawer-container>
 </mat-drawer-container>
