Cart page finished
Cart page finished

--- a/webstore/src/app/components/header/header.component.html
+++ b/webstore/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
         <div class="p-3 divide-y divide-solid">
             <div class="pb-3 flex justify-between">
                 <span class="mr-16">1 Items</span>
-                <a routerlink="cart"> View cart</a>
+                <a routerLink="cart"> View cart</a>
             </div>
             <div class="py-3">
                 <div class="flex justify-between font-light mb-2">
